Fixes issue of image not covering entire height of page

--- a/app.css
+++ b/app.css
@@ -6,6 +6,10 @@ body {
   color: white;
 }
 
+html {
+  height: 100%;
+}
+
 #content {
   text-align: center;
   padding-top: 25%;
